Fix logo position on mobile

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -29,8 +29,13 @@
 
 .masthead-logo {
   width: 10rem;
-  float: left;
-  margin-left: var(--spacer-2);
+  margin: auto;
+  padding-bottom: var(--spacer);
+
+  @media (min-width: 40rem)  {
+    float: left;
+    margin-left: var(--spacer-2);
+  }
 }
 
 .masthead-tagline {
